@@ -22,6 +22,10 @@ jsoup changelog
   * Bugfix: self-closing tags for known empty elements were incorrectly treated as errors.
     <https://github.com/jhy/jsoup/issues/868>
 
+  * Bugfix: fixed an issue where a self-closing title, noframes, or style tag would cause the rest of the page to be
+    incorrectly parsed as data or text.
+    <https://github.com/jhy/jsoup/issues/906>
+
 *** Release 1.10.3 [2017-Jun-11]
   * Added Elements.eachText() and Elements.eachAttr(name), which return a list of Element's text or attribute values,
     respectively. This makes it simpler to for example get a list of each URL on a page:
